--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
-  width: 1000px;
+  max-width: 1000px;
   height: 100vh;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.3);
   position: relative;
+}
+
+.circles {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 100px auto;
 }
