--- a/src/Circle.css
+++ b/src/Circle.css
@@ -1,11 +1,3 @@
-main {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 100px;
-}
-
 button {
   width: 150px;
   height: 150px;
@@ -14,4 +6,5 @@ button {
   background: teal;
   color: #fff;
   cursor: pointer;
+  margin: 1rem;
 }
