--- a/src/Circle.css
+++ b/src/Circle.css
@@ -1,4 +1,4 @@
-button {
+.circle {
   width: 150px;
   height: 150px;
   border-radius: 50%;
@@ -7,4 +7,8 @@ button {
   color: #fff;
   cursor: pointer;
   margin: 1rem;
+}
+
+button.active {
+  background-color: red;
 }
