--- a/src/PopUp.css
+++ b/src/PopUp.css
@@ -4,7 +4,7 @@
   left: 0;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,7 @@
   max-width: 600px;
   min-width: 350px;
   position: relative;
-  animation: fadeIn 1s ease-in-out;
+  animation: fadeIn 0.5s ease-in-out;
 }
 
 @keyframes fadeIn {
@@ -42,5 +42,15 @@
   height: 2rem;
   top: -15px;
   right: -15px;
+  cursor: pointer;
+}
+
+.reload-btn {
+  padding: 0.6rem 1.5rem;
+  font-family: inherit;
+  background-color: teal;
+  color: #fff;
+  margin-top: 1rem;
+  border: none;
   cursor: pointer;
 }
