--- a/src/Buttons.css
+++ b/src/Buttons.css
@@ -11,7 +11,7 @@
   color: #fff;
   font-size: 18px;
   font-family: inherit;
-  border: none;
+  border: 1px solid #fff;
   margin: 0.5rem;
   border-radius: 3px;
   box-shadow: 0 30px 30px rgba(0, 0, 0, 0.05);
