Added audio mute unmute button with tooltip

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -4,7 +4,7 @@ footer {
   width: 100%;
   text-align: center;
   background-color: #44b1fa;
-  color: #fff;
+  color: #333;
   padding: 0.5rem;
   line-height: 1.5;
 }
