--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,35 @@
   box-shadow: none;
   opacity: 0.8;
 }
+
+.mute-unmute {
+  position: absolute;
+  right: 10px;
+  margin: 1rem;
+}
+
+.mute-unmute button {
+  width: 35px;
+  height: 35px;
+  font-size: 1.2rem;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+}
+
+.tooltip {
+  position: absolute;
+  top: -30px;
+  left: -30px;
+  padding: 5px 0;
+  border-radius: 15px;
+  width: 80px;
+  background-color: #fff;
+  font-size: 10px;
+  display: none;
+  transition: all 0.3s ease;
+}
+
+.mute-unmute button:hover .tooltip {
+  display: block;
+}
