--- a/src/PopUp.css
+++ b/src/PopUp.css
@@ -4,7 +4,7 @@
   left: 0;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(255, 255, 255, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +12,8 @@
 
 .final-score {
   background-color: #fff;
-  padding: 1.5rem;
+  border: 2px solid #555;
+  padding: 2rem;
   max-width: 600px;
   min-width: 350px;
   position: relative;
